--- a/source/form.html
+++ b/source/form.html
@@ -9,8 +9,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="page-header__container container">
-      <div class="page-header__wrapper wrapper">
+    <div class="page-header__container">
+      <div class="page-header__wrapper">
         <a class="page-header__logo" href="index.html">
           <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
             alt="Кэт энерджи">
@@ -40,85 +40,93 @@
     </div>
 </header>
   <main class="form-main">
-    <h1 class="form-main__heading">Подбор программы</h1>
-    <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+    <div class="container">
+      <h1 class="form-main__heading">Подбор программы</h1>
+    </div>
+    <form class="form container" action="https://echo.htmlacademy.ru/" method="post">
       <p class="form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-      <fieldset class="form__item form__item--info">
+      <fieldset class="form__item form__item--info wrapper">
         <legend class="visually-hidden">Информация о питомце</legend>
-        <p>
+        <p class="form__wrapper">
           <label for="catName">Имя:<sup>*</sup></label>
           <input type="text" id="catName" placeholder="Барсик" required>
         </p>
-        <p>
+        <p class="form__wrapper form__wrapper--weight">
           <label for="catWeight">Вес (кг):<sup>*</sup></label>
           <input type="number" id="catWeight" placeholder="7" required>
         </p>
-        <p>
+        <p class="form__wrapper form__wrapper--age">
           <label for="catAge">Возраст (лет):</label>
           <input type="number" id="catAge" placeholder="7">
         </p>
       </fieldset>
-      <fieldset class="form__item form__item--program">
+      <fieldset class="form__item form__item--program wrapper">
         <legend class="visually-hidden">Цель программы</legend>
-        <ul class="form__list">
-          <li class="form__option form__radio">
-            <input type="radio" name="programVersion" id="slimProgram" checked>
+        <ul class="form__list form__list--goal">
+          <li class="form__option">
+            <input class="form__radio" type="radio" name="programVersion" id="slimProgram" checked>
             <label for="slimProgram">Похудение</label>
           </li>
-          <li class="form__option form__radio">
-            <input type="radio" name="programVersion" id="proProgram">
+          <li class="form__option">
+            <input class="form__radio" type="radio" name="programVersion" id="proProgram">
             <label for="proProgram">Набор массы</label>
           </li>
-          <li class="form__option form__radio">
-            <input type="radio" name="programVersion" id="needAdvice">
+          <li class="form__option">
+            <input class="form__radio" type="radio" name="programVersion" id="needAdvice">
             <label for="needAdvice">Не знаю (Нужен ваш совет)</label>
           </li>
         </ul>
       </fieldset>
       <fieldset class="form__item form__item--contacts">
-        <legend class="form__legend">Контактные данные (владельца кота)</legend>
-        <p>
-          <label for="contactMail">E-mail:<sup>*</sup></label>
-          <input type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
-        </p>
-        <p>
-          <label for="contactTel">Телефон:<sup>*</sup></label>
-          <input type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
-        </p>
+          <legend class="form__legend">Контактные данные (владельца кота)</legend>
+          <p>
+            <label for="contactMail">E-mail:<sup>*</sup></label>
+            <input type="email" id="contactMail" placeholder="kuklachev@gmail.com" required>
+          </p>
+          <p>
+            <label for="contactTel">Телефон:<sup>*</sup></label>
+            <input type="tel" id="contactTel" placeholder="8 (960) 900-60-90" required>
+          </p>
       </fieldset>
-      <fieldset>
+      <fieldset class="form__item">
         <label for="comment" class="form__legend">Комментарий</label>
-        <textarea id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
+        <div class="wrapper">
+          <textarea id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
+        </div>
       </fieldset>
-      <fieldset>
-        <legend class="form__legend">Дополнительно</legend>
-        <ul class="form__list">
-          <li class="form__option form__checkbox">
-            <input type="checkbox" name="extraSweetener" id="sweetener" checked>
+      <fieldset class="form__item">
+        <legend class="form__legend form__legend--extra">Дополнительно</legend>
+        <ul class="form__list form__list--extra">
+          <li class="form__option">
+            <input class="form__checkbox" type="checkbox" name="extraSweetener" id="sweetener" checked>
             <label for="sweetener">Сахарозаменитель</label>
           </li>
-          <li class="form__option form__checkbox">
-            <input type="checkbox" name="extraWater" id="water">
+          <li class="form__option">
+            <input class="form__checkbox" type="checkbox" name="extraWater" id="water">
             <label for="water">Питьевая вода</label>
           </li>
-          <li class="form__option form__checkbox">
-            <input type="checkbox" name="extraMilk" id="milk">
+          <li class="form__option">
+            <input class="form__checkbox" type="checkbox" name="extraMilk" id="milk">
             <label for="milk">Молоко</label>
           </li>
-          <li class="form__option form__checkbox">
-            <input type="checkbox" name="extraVitamins" id="vitamins">
+          <li class="form__option">
+            <input class="form__checkbox" type="checkbox" name="extraVitamins" id="vitamins">
             <label for="vitamins">Витамины</label>
           </li>
         </ul>
       </fieldset>
-      <button class="form__button" type="submit">Отправить заявку</button>
-      <div><sup>*</sup> — Обязательные поля</div>
+      <div class="form__footer wrapper">
+        <button class="form__button wrapper" type="submit">Отправить заявку</button>
+        <div class="form__note"><sup>*</sup> — Обязательные поля</div>
+      </div>
+
+      </div>
     </form>
-    <section class="address">
+    <section class="address address--grey-bg">
       <h2 class="visually-hidden">
         Адрес
       </h2>
-      <div class="address__wrapper address__wrapper--bg container">
+      <div class="address__wrapper">
         <p class="address__text">
           Приглашаем к сотрудничеству дилеров!
         </p>
@@ -131,9 +139,9 @@
       </div>
     </section>
   </main>
-  <footer class="page-footer container">
+  <footer class="page-footer">
     <p class="page-footer__heading"><b>Cat</b> energy</p>
-    <div class="page-footer__social social wrapper">
+    <div class="page-footer__social social">
       <h2 class="visually-hidden">
         Социальные сети
       </h2>
@@ -152,7 +160,7 @@
         </li>
       </ul>
     </div>
-    <div class="page-footer__copyright copyright wrapper">
+    <div class="page-footer__copyright copyright">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
