--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="page-header__container container">
-      <div class="page-header__wrapper wrapper">
+    <div class="page-header__container">
+      <div class="page-header__wrapper">
         <a class="page-header__logo">
           <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="37"
             alt="Кэт энерджи">
@@ -40,11 +40,11 @@
     </div>
 </header>
 <main class="page-main">
-  <div class="container">
+  <div class="page-main__container">
     <h1 class="page-main__heading">Функциональное питание для котов</h1>
     <p class="page-main__slogan">Занялся собой? Займись котом!</p>
   </div>
-  <section class="programs wrapper">
+  <section class="programs">
     <h2 class="visually-hidden">
       Программы
     </h2>
@@ -70,27 +70,29 @@
       </ul>
     </div>
   </section>
-  <section class="details wrapper">
-    <h2 class="details__heading">
-      Как это работает
-    </h2>
-    <ul class="details__list">
-      <li class="details__item details__item--beneficial">
-        Функциональное питание содержит только полезные питательные вещества.
-      </li>
-      <li class="details__item details__item--powder">
-        Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-      </li>
-      <li class="details__item details__item--replacement">
-        Замените один-два приема обычной еды на наше функциональное питание.
-      </li>
-      <li class="details__item details__item--changes">
-        Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-      </li>
-    </ul>
+  <section class="details">
+    <div class="details__wrapper">
+      <h2 class="details__heading">
+        Как это работает
+      </h2>
+      <ul class="details__list">
+        <li class="details__item details__item--beneficial">
+          Функциональное питание содержит только полезные питательные вещества.
+        </li>
+        <li class="details__item details__item--powder">
+          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+        </li>
+        <li class="details__item details__item--replacement">
+          Замените один-два приема обычной еды на наше функциональное питание.
+        </li>
+        <li class="details__item details__item--changes">
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+        </li>
+      </ul>
+    </div>
   </section>
-  <section class="example container">
-    <div class="wrapper">
+  <section class="example">
+    <div class="example__wrapper">
       <h2 class="example__heading">
         Живой пример
       </h2>
@@ -98,17 +100,17 @@
         Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
         изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
       </p>
-      <div class="example-result">
-        <div class="example-result__item example-result__item--weight">
-          <p class="example-result__count">5 кг</p>
-          <p class="example-result__text">снижение веса</p>
-        </div>
-        <div class="example-result__item example-result__item--duration">
-          <p class="example-result__count">60 дней</p>
-          <p class="example-result__text">затрачено времени</p>
-        </div>
-        <p class="example__costs">Затраты на питание: 15 000 руб.</p>
+    </div>
+    <div class="example-result">
+      <div class="example-result__item example-result__item--weight">
+        <p class="example-result__count">5 кг</p>
+        <p class="example-result__text">снижение веса</p>
       </div>
+      <div class="example-result__item example-result__item--duration">
+        <p class="example-result__count">60 дней</p>
+        <p class="example-result__text">затрачено времени</p>
+      </div>
+      <p class="example__costs">Затраты на питание: 15 000 руб.</p>
     </div>
     <div class="example__slider slider">
       <ul class="slider__list">
@@ -129,7 +131,7 @@
     <h2 class="visually-hidden">
       Адрес
     </h2>
-    <div class="address__wrapper container">
+    <div class="address__wrapper">
       <p class="address__text">
         Приглашаем к сотрудничеству дилеров!
       </p>
@@ -142,9 +144,9 @@
     </div>
   </section>
 </main>
-<footer class="page-footer container">
+<footer class="page-footer">
   <p class="page-footer__heading"><b>Cat</b> energy</p>
-  <div class="page-footer__social social wrapper">
+  <div class="page-footer__social social">
     <h2 class="visually-hidden">
       Социальные сети
     </h2>
@@ -163,7 +165,7 @@
       </li>
     </ul>
   </div>
-  <div class="page-footer__copyright copyright wrapper">
+  <div class="page-footer__copyright copyright">
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
   </div>
 </footer>
