--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,9 @@
           <img class="page-header__logo-image" src="https://via.placeholder.com/150x150" width="33" height="38"
             alt="Кэт энерджи">
         </a>
-        <a class="page-header__title"></a>
+        <a class="page-header__title"><b>Cat</b> energy</a>
       </div>
-      <nav class="main-nav main-nav--index main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--index main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list site-list--index">
           <li class="site-list__item">
@@ -197,22 +197,8 @@
     </div>
   </footer>
 
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
+  <script src="/js/menu.js"></script>
 
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-  </script>
 </body>
 
 </html>
