--- a/source/index.html
+++ b/source/index.html
@@ -49,17 +49,21 @@
   </header>
   <main class="page-main">
     <div class="page-main__heading">
-      <div class="page-main__heading-bg">
-        <div>
-          <h1 class="page-main__title">Функциональное питание для котов</h1>
-          <p class="page-main__slogan">Занялся собой? Займись котом!</p>
+      <div class="page-main__heading-background-color">
+        <div class="page-main__heading-background-img">
+          <div class="page-main__container">
+            <h1 class="page-main__title">Функциональное питание для котов</h1>
+            <p class="page-main__slogan">Занялся собой? Займись котом!</p>
+          </div>
         </div>
+      </div>
+      <div class="page-main__wrapper">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/index-can.png 1x, img/index-can@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-          <img class="page-main__image" src="img/index-can-mobile.jpg" srcset="img/index-can-mobile@2x.jpg 2x" width="280" height="270"
+          <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x">
+          <img class="page-main__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x" width="280" height="270"
             alt="Рекламное фото корма с курицей">
         </picture>
+        <a class="page-main__button" href="form.html">Подобрать программу</a>
       </div>
     </div>
     <section class="programs">
@@ -67,7 +71,6 @@
         Программы
       </h2>
       <div class="programs__wrapper">
-        <a class="programs__button" href="form.html">Подобрать программу</a>
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
             <article class="programs__card programs__card--slim">
@@ -95,16 +98,20 @@
         </h2>
         <ul class="details__list">
           <li class="details__item details__item--beneficial">
-            Функциональное питание содержит только полезные питательные вещества.
+            <p>Функциональное питание содержит только полезные питательные вещества.</p>
+            <span class="details__number details__number--first">1</span>
           </li>
           <li class="details__item details__item--powder">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            <span class="details__number details__number--second">2</span>
           </li>
           <li class="details__item details__item--replacement">
-            Замените один-два приема обычной еды на наше функциональное питание.
+            <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <span class="details__number details__number--third">3</span>
           </li>
           <li class="details__item details__item--changes">
-            Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего&nbsp;питомца!
+            <p>Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего&nbsp;питомца!</p>
+            <span class="details__number details__number--fourth">4</span>
           </li>
         </ul>
       </div>
@@ -141,27 +148,21 @@
             <div class="slider__wrapper">
               <ul class="slider__list">
                 <li class="slider__item slider__item--before slider__item--current">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/before-desktop.png 1x, img/before-desktop@2x.png 2x">
-                    <img class="slider__photo slider__photo--before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото до">
-                  </picture>
+                  <img class="slider__photo slider__photo--before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото до">
                 </li>
                 <li class="slider__item slider__item--after">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/after-desktop.png 1x, img/after-desktop@2x.png 2x">
-                    <img class="slider__photo slider__photo--after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" width="311" height="232" alt="Фото после">
-                  </picture>
+                  <img class="slider__photo slider__photo--after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" width="311" height="232" alt="Фото после">
                 </li>
               </ul>
               <div class="slider__range">
-                <button class="slider__button slider__button--active">Было</button>
+                <button class="slider__button slider__button--before slider__button--active">Было</button>
                 <div class="slider__controls">
                   <div class="slider__scale">
                     <div class="slider__bar"></div>
                   </div>
                   <div class="slider__toggle" tabindex="0"></div>
                 </div>
-                <button class="slider__button">Стало</button>
+                <button class="slider__button slider__button--after">Стало</button>
               </div>
             </div>
           </div>
@@ -213,18 +214,18 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-              <span class="visually-hidden">Инстаграм</span>
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.98438 0.0625C9.31771 0.0625 10.4062 0.078125 11.25 0.109375C11.9688 0.140625 12.6094 0.265625 13.1719 0.484375C13.7135 0.692708 14.1823 0.994792 14.5781 1.39062C14.974 1.78646 15.276 2.25521 15.4844 2.79687C15.7031 3.35937 15.8281 4 15.8594 4.71875C15.8906 5.5625 15.9062 6.65104 15.9062 7.98437C15.9062 9.31771 15.8906 10.4062 15.8594 11.25C15.8281 11.9687 15.7031 12.6094 15.4844 13.1719C15.276 13.7135 14.974 14.1823 14.5781 14.5781C14.1823 14.974 13.7135 15.276 13.1719 15.4844C12.6094 15.7031 11.9688 15.8281 11.25 15.8594C10.4062 15.8906 9.31771 15.9062 7.98438 15.9062C6.65104 15.9062 5.5625 15.8906 4.71875 15.8594C4 15.8281 3.35938 15.7031 2.79688 15.4844C2.25521 15.276 1.78646 14.974 1.39062 14.5781C0.994792 14.1823 0.692708 13.7135 0.484375 13.1719C0.265625 12.6094 0.140625 11.9687 0.109375 11.25C0.078125 10.4062 0.0625 9.31771 0.0625 7.98437C0.0625 6.65104 0.078125 5.5625 0.109375 4.71875C0.140625 4 0.265625 3.35937 0.484375 2.79687C0.692708 2.25521 0.994792 1.78646 1.39062 1.39062C1.78646 0.994792 2.25521 0.692708 2.79688 0.484375C3.35938 0.265625 4 0.140625 4.71875 0.109375C5.5625 0.078125 6.65104 0.0625 7.98438 0.0625ZM7.98438 1.09375C6.59896 1.09375 5.46875 1.10937 4.59375 1.14062C4.03125 1.16146 3.51042 1.26042 3.03125 1.4375C2.28125 1.75 1.75 2.28125 1.4375 3.03125C1.26042 3.51042 1.16146 4.03125 1.14062 4.59375C1.10938 5.46875 1.09375 6.59896 1.09375 7.98437C1.09375 9.36979 1.10938 10.5 1.14062 11.375C1.16146 11.9375 1.26042 12.4583 1.4375 12.9375C1.75 13.6875 2.28125 14.2187 3.03125 14.5312C3.51042 14.7083 4.03125 14.8073 4.59375 14.8281C5.46875 14.8594 6.59896 14.875 7.98438 14.875C9.36979 14.875 10.5 14.8594 11.375 14.8281C11.9375 14.8073 12.4583 14.7083 12.9375 14.5312C13.6875 14.2187 14.2188 13.6875 14.5312 12.9375C14.7083 12.4583 14.8073 11.9375 14.8281 11.375C14.8594 10.5 14.875 9.36979 14.875 7.98437C14.875 6.59896 14.8594 5.46875 14.8281 4.59375C14.8073 4.03125 14.7083 3.51042 14.5312 3.03125C14.2188 2.28125 13.6875 1.75 12.9375 1.4375C12.4583 1.26042 11.9375 1.16146 11.375 1.14062C10.5 1.10937 9.36979 1.09375 7.98438 1.09375ZM7.98438 11.1562C8.85938 11.1562 9.60677 10.8464 10.2266 10.2266C10.8464 9.60677 11.1562 8.85937 11.1562 7.98437C11.1562 7.10937 10.8464 6.36198 10.2266 5.74219C9.60677 5.1224 8.85938 4.8125 7.98438 4.8125C7.10938 4.8125 6.36198 5.1224 5.74219 5.74219C5.1224 6.36198 4.8125 7.10937 4.8125 7.98437C4.8125 8.85937 5.1224 9.60677 5.74219 10.2266C6.36198 10.8464 7.10938 11.1562 7.98438 11.1562ZM7.98438 3.92187C9.10938 3.92187 10.0677 4.31771 10.8594 5.10937C11.651 5.90104 12.0469 6.85937 12.0469 7.98437C12.0469 9.10937 11.651 10.0677 10.8594 10.8594C10.0677 11.651 9.10938 12.0469 7.98438 12.0469C6.85938 12.0469 5.90104 11.651 5.10938 10.8594C4.31771 10.0677 3.92188 9.10937 3.92188 7.98437C3.92188 6.85937 4.31771 5.90104 5.10938 5.10937C5.90104 4.31771 6.85938 3.92187 7.98438 3.92187ZM13.1719 3.76562C13.1719 4.02604 13.0781 4.2474 12.8906 4.42969C12.7031 4.61198 12.474 4.70312 12.2031 4.70312C11.9427 4.70312 11.7214 4.61198 11.5391 4.42969C11.3568 4.2474 11.2656 4.02604 11.2656 3.76562C11.2656 3.49479 11.3568 3.26562 11.5391 3.07812C11.7214 2.89062 11.9427 2.79687 12.2031 2.79687C12.4635 2.79687 12.6901 2.89323 12.8828 3.08594C13.0755 3.27865 13.1719 3.50521 13.1719 3.76562Z" fill="#666666"/>
               </svg>
+              <span class="visually-hidden">Инстаграм</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">Фейсбук</span>
               <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16.5 1.83325H13.75C12.5344 1.83325 11.3686 2.30674 10.5091 3.14957C9.64956 3.99239 9.16667 5.1355 9.16667 6.32743V9.02394H6.41667V12.6193H9.16667V19.81H12.8333V12.6193H15.5833L16.5 9.02394H12.8333V6.32743C12.8333 6.08905 12.9299 5.86042 13.1018 5.69186C13.2737 5.52329 13.5069 5.4286 13.75 5.4286H16.5V1.83325Z" stroke="#666666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
+              <span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
         </ul>
@@ -238,6 +239,7 @@
   </footer>
 
   <script src="js/menu.js"></script>
+  <script src="js/slider.js"></script>
 
 </body>
 
