--- a/source/form.html
+++ b/source/form.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Подбор программы Кэт энерджи</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
+
+    <!--
   <svg style="display: none">
     <symbol viewBox="0 0 20 15" id="icon-mail-address">
       <path stroke-width="1.3" d="M1.1793 6v8M18.1793 6v8M.529297 13.35H18.5293M.529297 1.35H18.5293M17.8793 3.1821L9.52932 9.67654 1.1793 3.18209V1.65H17.8793v1.5321z"/>
@@ -31,6 +33,8 @@
       <path d="M13.6426.0157537L13.5 0 0 1.40733V26.0129L13.5 34 27 26.0129V1.40733L13.6426.0157537zM25.2344 25.0151L13.5 31.9573 1.76561 25.0151V14.9293l11.68509 6.9158.0194 1.2533-8.01659-4.7436-.01056 1.2253 8.04645 4.8084.0194 1.2865-8.04472-4.7576-.01057 1.2253L13.5 26.9511l8.1239-4.8329V16.909l3.6193-2.1495-.0088 10.2556zm0-11.5632l-3.2197 1.88-1.4822.8752-7.0659-4.187-.0106 1.2253 6.0397 3.5726-.0528.0315-.1303.0752-.859.4919-4.987-2.9477-.0106 1.2253 3.9361 2.328-.933.6092-.0211.0122-2.9714-1.7416-.0106 1.2253 1.9469 1.1342-1.9874 1.1868-11.6182-6.8721 11.6376-6.95789 11.7995 6.83359zm0-1.2253L13.4401 5.31075 1.76561 12.2196V2.9897L13.5 1.76442 25.2344 2.9897v9.2369z"/>
     </symbol>
   </svg>
+
+  -->
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
@@ -124,14 +128,14 @@
             <label for="contactMail">E-mail:<sup>*</sup></label>
             <input class="form__field form__field--mail" type="email" id="contactMail" placeholder="kuklachev@gmail.com">
             <svg class="form__icon form__icon--envelope" width="20" height="15">
-              <use xlink:href="#icon-mail-address"></use>
+              <use xlink:href="#icon-email"></use>
             </svg>
           </p>
           <p class="form__point">
             <label for="contactTel">Телефон:<sup>*</sup></label>
             <input class="form__field form__field--tel" type="tel" id="contactTel" placeholder="8 (960) 900-60-90">
             <svg class="form__icon form__icon--tel" width="20" height="21">
-              <use xlink:href="#icon-phone-number"></use>
+              <use xlink:href="#icon-phone"></use>
             </svg>
           </p>
         </div>
@@ -250,14 +254,14 @@
       <div class="page-footer__copyright copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
           <svg width="27" height="34">
-            <use xlink:href="#icon-academy"></use>
+            <use xlink:href="#icon-htmlacademy"></use>
           </svg>
         </a>
       </div>
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 
 </body>
 
