--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог Кэт энерджи</title>
+  <link href="/fonts/oswaldregular.woff2" rel="preload" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -413,7 +414,7 @@
           <img class="address__image" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="320" height="362"
             alt="Адрес: г.Санкт-Петербург, ул. Большая Конюшенная, д. 19/8">
         </picture>
-        <div id="mymap"></div>
+        <div id="map"></div>
       </div>
     </section>
   </main>
@@ -461,7 +462,7 @@
     </div>
   </footer>
 
-  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d385dd7507c752b2d475c28e25e44942942c50b550ffed42603a92f0b25fe49&amp;width=100%25&amp;height=100%25&amp;id=mymap&amp;lang=ru_RU&amp;scroll=true"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=4cbdaa19-8a3d-4e4f-a45d-ad062f50efe7&lang=ru_RU" type="text/javascript"></script>
   <script src="js/script.min.js"></script>
 
 </body>
