--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог Кэт энерджи</title>
-  <link href="/fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -13,7 +13,7 @@
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" href="index.html" aria-label="Лого Кэт энерджи">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -21,7 +21,7 @@
               alt="Лого Кэт энерджи">
           </picture>
         </a>
-        <a class="page-header__title" href="index.html">
+        <a class="page-header__title" href="index.html" aria-label="Кэт энерджи">
           <img class="page-header__logo-text" src="img/logo-mobile-text.svg" width="101" height="18"
           alt="Cat energy">
         </a>
@@ -57,7 +57,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy PRO 500 г курица">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-1-desktop.webp 1x, img/catalog-1-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-1-tablet.webp 1x, img/catalog-1-tablet@2x.webp 2x">
@@ -94,7 +94,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy PRO 1000 г курица">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-2-desktop.webp 1x, img/catalog-2-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-2-tablet.webp 1x, img/catalog-2-tablet@2x.webp 2x">
@@ -131,7 +131,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy PRO 500 г рыба">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-3-desktop.webp 1x, img/catalog-3-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-3-tablet.webp 1x, img/catalog-3-tablet@2x.webp 2x">
@@ -168,7 +168,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy PRO 1000 г рыба">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-4-desktop.webp 1x, img/catalog-4-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-4-tablet.webp 1x, img/catalog-4-tablet@2x.webp 2x">
@@ -205,7 +205,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy slim 500 г гречка">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-5-desktop.webp 1x, img/catalog-5-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-5-tablet.webp 1x, img/catalog-5-tablet@2x.webp 2x">
@@ -242,7 +242,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy slim 1000 г гречка">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-6-desktop.webp 1x, img/catalog-6-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-6-tablet.webp 1x, img/catalog-6-tablet@2x.webp 2x">
@@ -279,7 +279,7 @@
           <li class="products__item">
             <div class="products__card">
               <div class="products__wrapper products__wrapper--photo">
-                <a class="products__photo-link" href="product.html">
+                <a class="products__photo-link" href="product.html" aria-label="Cat Energy slim 500 г рис">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog-7-desktop.webp 1x, img/catalog-7-desktop@2x.webp 2x">
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-7-tablet.webp 1x, img/catalog-7-tablet@2x.webp 2x">
@@ -457,6 +457,7 @@
           <svg width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
           </svg>
+          <span class="visually-hidden">Лого HTML Academy</span>
         </a>
       </div>
     </div>
