--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Подбор программы Кэт энерджи</title>
-  <link href="/fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -13,7 +13,7 @@
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
-        <a class="page-header__logo" href="index.html">
+        <a class="page-header__logo" href="index.html" aria-label="Лого Кэт энерджи">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -21,7 +21,7 @@
               alt="Лого Кэт энерджи">
           </picture>
         </a>
-        <a class="page-header__title" href="index.html">
+        <a class="page-header__title" href="index.html" aria-label="Кэт энерджи">
           <img class="page-header__logo-text" src="img/logo-mobile-text.svg" width="101" height="18"
           alt="Cat energy">
         </a>
@@ -124,7 +124,7 @@
           </legend>
         </div>
         <div class="form__container">
-          <label class="visually-hidden" aria-label="Комментарий"></label>
+          <label for="comment" class="visually-hidden" aria-label="Комментарий"></label>
           <textarea class="form__textarea" id="comment" name="commentArea" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
       </fieldset>
@@ -232,6 +232,7 @@
           <svg width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
           </svg>
+          <span class="visually-hidden">Лого HTML Academy</span>
         </a>
       </div>
     </div>
