--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
-  <link href="/fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -13,7 +13,7 @@
   <header class="page-header">
     <div class="page-header__container">
       <div class="page-header__wrapper">
-        <a class="page-header__logo">
+        <a class="page-header__logo" aria-label="Лого Кэт энерджи">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -21,7 +21,7 @@
               alt="Лого Кэт энерджи">
           </picture>
         </a>
-        <a class="page-header__title">
+        <a class="page-header__title" aria-label="Кэт энерджи">
           <img class="page-header__logo-text" src="img/logo-mobile-text.svg" width="101" height="18"
           alt="Cat energy">
         </a>
@@ -242,10 +242,12 @@
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <div class="copyright__text">HTML Academy</div>
           <svg width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
           </svg>
+          <span class="visually-hidden">Лого HTML Academy</span>
         </a>
       </div>
     </div>
